k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice-demo
  labels:
    app.kubernetes.io/part-of: microservice-k8s-demo
