k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-k8s-demo
  namespace: microservice-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: microservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice-demo-microservice-k8s-demo
                port:
                  number: 80
